# TensorToolkit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: TensorToolkitConfig.cmake.in  TensorToolkitDependencies.cmake.in
cmake/Modules/: CudaCccl.cmake  FindCUTENSOR.cmake  Findhptt.cmake  MathBackend.cmake
docs/: DISTRIBUTION.md  Doxyfile  TensorToolkit.tag  build_docs.sh  custom_syntax_highlighting.css  mainpage.md
docs/dev/: aocl_backend_changelog.md  docs-map.md  fermion_design.md  index.md  random_seed_scope.md  test_coverage_report.md
docs/dev/design/: 2026-03-25-cmake-package-architecture.md  architecture-overview.md  backend-architecture.md  fermion-design.md  index-lineage.md  index.md  tensor-contraction-api.md
docs/dev/guides/: 2026-03-25-downstream-cmake-package-migration.md  dev-setup.md  docs-distribution.md  randomness-and-seeding.md
docs/dev/modules/: index.md  mpi_tensor_manipulation.md  qltensor.md  tensor_manipulation.md
docs/dev/practices/: coding-standards.md
docs/dev/reference/: index.md
docs/dev/testing/: coverage-report.md  testing-strategy.md
docs/developer/: index.md
docs/superpowers/plans/: 2026-06-15-two-rank2-gemm-kernel.md
docs/tutorials/: 01_installation.md  02_quick_start.md  03_indices_and_quantum_numbers.md  04_tensor_creation.md  05_tensor_unary_operations.md  06_ising_vertex_tensor.md  07_tensor_contractions.md  08_matrix_decomposition.md  09_ising_trg_example.md  10_mpi_basics.md  11_mpi_advanced.md  12_gpu_setup.md  13_z2_graded_tensor_network.md  index.md
docs/tutorials_cn/: 01_安装.md  02_快速开始.md  03_索引与量子数.md  04_张量创建.md  05_一元操作与收缩.md  08_矩阵分解.md  10_mpi_基础.md  12_GPU_设置.md  13_Z2_分级张量网络.md  index.md
docs/user/en/: README.md
docs/user/en/explanation/: index.md  indices-and-quantum-numbers.md  matrix-decomposition-concepts.md  symmetry-and-block-sparsity.md  tensor-contraction-view.md  z2-graded-fermions.md
docs/user/en/howto/: build-and-install.md  build-and-run-tests.md  distributed-svd.md  enable-gpu.md  index.md  install-cutensor.md  use-external-hptt.md
docs/user/en/reference/: api-reference.md  cmake-options.md  glossary.md  index.md  runtime-environment.md
docs/user/en/tutorials/: contractions-and-decompositions.md  gpu-accelerated-workflow.md  index.md  mpi-parallel-basics.md  quick-start-trg.md  tensor-basics-walkthrough.md
examples/: CMakeLists.txt  ising_common.h  ising_exact.py  z2_ising_tensor.cpp  z2_ising_trg.cpp
include/qlten/: core.h  mpi_tensor_manipulation_all.h  qlten.h  qltensor_all.h  tensor_manipulation_all.h  version.h
include/qlten/framework/: consts.h  exceptions.h  flops_count.h  mem_ops.h  value_t.h  vec_hash.h
include/qlten/framework/bases/: executor.h  fermionicable.h  hashable.h  showable.h  streamable.h
include/qlten/framework/hp_numeric/: backend_selector.h  blas_extensions.h  blas_level1.h  blas_level2.h  blas_level3.h  gpu_set.h  lapack.h  mpi_fun.h  omp_set.h  ten_trans.h
include/qlten/mpi_tensor_manipulation/reduction/: mpi_reduce_sum.h
include/qlten/mpi_tensor_manipulation/ten_decomp/: mpi_svd.h
include/qlten/qltensor/: index.h  qltensor.h  qltensor_impl.h  qnsct.h
include/qlten/qltensor/blk_spar_data_ten/: blk_spar_data_ten.h  data_blk.h  data_blk_mat.h  data_blk_operations.h  data_blk_operator_separate_ctrct.h  data_blk_operator_seperate_ctrct.h  global_operations.h  qnblk_info.h  raw_data_operation_tasks.h  raw_data_operations.h
include/qlten/qltensor/qn/: qn.h  qnval.h  qnval_u1.h
include/qlten/qltensor/special_qn/: fu1qn.h  fu1u1qn.h  fz2qn.h  fz2u1qn.h  special_qn_all.h  trivial_rep_qn.h  u1qn.h  u1u1qn.h  u1u1znqn.h  u1u1zqn.h  u1zqn.h  znqn.h
include/qlten/tensor_manipulation/: basic_operations.h  contract_contiguous_axes.h  index_combine.h  index_lineage.h  ten_block_expand.h  ten_ctrct.h  ten_ctrct_1sct.h  ten_ctrct_based_mat_trans.h  ten_ctrct_fast.h  ten_diagonal_tensor_product.h  ten_expand.h  ten_fuse_index.h  ten_linear_combine.h  tensor_op_cost.h
include/qlten/tensor_manipulation/dmrg/: axis_ops.h  block_expand.h  contract_1sector.h
include/qlten/tensor_manipulation/ten_decomp/: mat_evd.h  ten_decomp_basic.h  ten_lq.h  ten_qr.h  ten_svd.h
include/qlten/utility/: random.h  timer.h  utils_inl.h
tests/: CMakeLists.txt  testing_utility.h
tests/package_consumer/: CMakeLists.txt  smoke_cpu.cc  smoke_gpu.cu  smoke_headers.cc  smoke_plain_cxx_headers.cc  verify_install_cpu.cmake  verify_install_gpu.cmake
tests/test_qltensor/: test_fermion_qltensor.cc  test_index.cc  test_qltensor.cc  test_qltensor_float.cc  test_qn.cc  test_qnsct.cc
tests/test_qltensor/test_qnval/: test_qnval_u1.cc
tests/test_qltensor/test_special_qn/: test_fu1qn.cc  test_fz2u1qn.cc  test_u1qn.cc
tests/test_tensor_manipulation/: test_basic_operations.cc  test_diagonal_tensor_product.cc  test_dmrg_axis_ops.cc  test_fermion_ten_ctrct.cc  test_index_combine.cc  test_index_lineage.cc  test_sym_mat_evd.cc  test_sym_mat_evd.cpp  test_ten_block_expand.cc  test_ten_ctrct.cc  test_ten_ctrct_1sct.cc  test_ten_expand.cc  test_ten_fuse_index.cc  test_ten_linear_combine.cc  test_ten_lq.cc  test_ten_qr.cc  test_ten_svd.cc  test_tensor_op_cost.cc
tests/test_tensor_mpi/: test_boost_mpi.cc  test_mpi_svd.cc  test_ten_boost_serialization.cc  test_ten_mpi_basic.cc  test_ten_mpi_comm.cc  test_ten_mpi_reduce_sum.cc
tests/test_utility/: hp_numeric.h  test_cpu_numerics_threads.cc  test_fermion_parity_exchange.cpp  test_header_aggregation.cc  test_mpi_fun.cc  test_version.cc
